# Lab1_OS

./: .gitignore  CMakeLists.txt  README.md  child1.cpp  child2.cpp  lab1_OS.pdf:Zone.Identifier  parent.cpp
include/: ProcessManager.h  Win_ProcessManager.h
src/: ProcessManager.cpp  Win_ProcessManager.cpp
